--- a/bin/vue/Vue1.fxml
+++ b/bin/vue/Vue1.fxml
@@ -13,10 +13,10 @@
             <Insets top="20.0" />
          </VBox.margin>
          <bottom>
-            <Button fx:id="btnConvert" mnemonicParsing="false" onAction="#handleActionConvert" text="Button" BorderPane.alignment="CENTER" />
+            <Button fx:id="btnConvert" mnemonicParsing="false" onAction="#handleActionConvert" text="Convertir" BorderPane.alignment="CENTER" />
          </bottom>
          <top>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" BorderPane.alignment="CENTER" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Morse" BorderPane.alignment="CENTER" />
          </top>
          <center>
             <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="210.0" prefWidth="360.0" BorderPane.alignment="CENTER">
@@ -24,12 +24,21 @@
                   <Insets left="20.0" right="20.0" />
                </BorderPane.margin>
                <children>
-                  <TextArea fx:id="tAConvert" prefHeight="184.0" prefWidth="358.0" />
+                  <TextArea fx:id="tATexte" prefHeight="184.0" prefWidth="358.0" />
                </children>
             </FlowPane>
          </center>
       </BorderPane>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" />
-      <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="100.0" prefWidth="200.0" />
+      <BorderPane prefHeight="200.0" prefWidth="200.0">
+         <center>
+            <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="210.0" prefWidth="360.0" BorderPane.alignment="CENTER">
+               <children>
+                  <TextArea fx:id="tATexteConverti" editable="false" prefHeight="184.0" prefWidth="358.0" visible="false" />
+               </children>
+               <BorderPane.margin>
+                  <Insets top="50.0" />
+               </BorderPane.margin>
+            </FlowPane>
+         </center></BorderPane>
    </children>
 </VBox>
