--- a/bin/vue/Vue1.fxml
+++ b/bin/vue/Vue1.fxml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.CtrlVueMorse">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.CtrlVueMorse">
    <children>
       <BorderPane fx:id="vue1PanelDevises" prefHeight="300.0" prefWidth="200.0">
          <VBox.margin>
             <Insets top="20.0" />
          </VBox.margin>
          <bottom>
-            <Button fx:id="btnConvert" mnemonicParsing="false" onAction="#handleActionConvert" text="Convertir" BorderPane.alignment="CENTER" />
+            <Button fx:id="btnConvert" mnemonicParsing="false" onAction="#handleActionConvert" text="Convertir" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin></Button>
          </bottom>
          <top>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Morse" BorderPane.alignment="CENTER" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Convertisseur" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <BorderPane.margin>
+                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+               </BorderPane.margin></Text>
          </top>
          <center>
             <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="210.0" prefWidth="360.0" BorderPane.alignment="CENTER">
@@ -24,21 +36,41 @@
                   <Insets left="20.0" right="20.0" />
                </BorderPane.margin>
                <children>
-                  <TextArea fx:id="tATexte" prefHeight="184.0" prefWidth="358.0" />
+                  <TextArea fx:id="tATexte" prefHeight="100.0" prefWidth="350.0" promptText="Saisir une phrase ou un code morse">
+                     <font>
+                        <Font size="14.0" />
+                     </font></TextArea>
                </children>
             </FlowPane>
          </center>
       </BorderPane>
-      <BorderPane prefHeight="200.0" prefWidth="200.0">
+      <BorderPane prefHeight="226.0" prefWidth="400.0">
          <center>
-            <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="210.0" prefWidth="360.0" BorderPane.alignment="CENTER">
+            <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="208.0" prefWidth="400.0" BorderPane.alignment="CENTER">
                <children>
-                  <TextArea fx:id="tATexteConverti" editable="false" prefHeight="184.0" prefWidth="358.0" visible="false" />
+                  <TextArea fx:id="tATexteConverti" editable="false" prefHeight="100.0" prefWidth="350.0" visible="false">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <FlowPane.margin>
+                        <Insets top="-20.0" />
+                     </FlowPane.margin>
+                  </TextArea>
                </children>
                <BorderPane.margin>
                   <Insets top="50.0" />
                </BorderPane.margin>
             </FlowPane>
-         </center></BorderPane>
+         </center>
+         <top>
+            <Text fx:id="tEstConverti" strokeType="OUTSIDE" strokeWidth="0.0" text="Le résultat de la conversion:" visible="false" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <BorderPane.margin>
+                  <Insets top="20.0" />
+               </BorderPane.margin>
+            </Text>
+         </top></BorderPane>
    </children>
 </VBox>
