--- a/bin/vue/Vue2.fxml
+++ b/bin/vue/Vue2.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.CtrlVueCode">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.CtrlVueCode">
    <children>
       <BorderPane fx:id="vue1PanelDevises" prefHeight="300.0" prefWidth="200.0">
          <VBox.margin>
@@ -36,7 +36,7 @@
                <center>
                   <HBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="200.0" prefWidth="350.0" spacing="10.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button fx:id="btnAjouterCode" mnemonicParsing="false" text="Ajouter">
+                        <Button fx:id="btnAjouterCode" mnemonicParsing="false" onAction="#handleActionAjouterCode" text="Ajouter">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -44,12 +44,12 @@
                               <Insets />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="btnModifierCode" mnemonicParsing="false" text="Modifier">
+                        <Button fx:id="btnModifierCode" mnemonicParsing="false" onAction="#handleActionModifierCode" text="Modifier">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Button>
-                        <Button fx:id="btnSupprimerCode" mnemonicParsing="false" text="Supprimer">
+                        <Button fx:id="btnSupprimerCode" mnemonicParsing="false" onAction="#handleActionSupprimerCode" text="Supprimer">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -64,7 +64,7 @@
                   </HBox>
                </center>
                <bottom>
-                  <Button fx:id="btnFermerListeCode" mnemonicParsing="false" text="Fermer" BorderPane.alignment="CENTER">
+                  <Button fx:id="btnFermerListeCode" mnemonicParsing="false" onAction="#handleActionFermerFenetre" text="Fermer" BorderPane.alignment="CENTER">
                      <font>
                         <Font size="18.0" />
                      </font>
