--- a/src/vue/Vue2.fxml
+++ b/src/vue/Vue2.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.CtrlVueCode">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.CtrlVueCode">
    <children>
       <BorderPane fx:id="vue1PanelDevises" prefHeight="300.0" prefWidth="200.0">
          <VBox.margin>
@@ -22,13 +22,10 @@
                </BorderPane.margin></Text>
          </top>
          <center>
-            <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="210.0" prefWidth="360.0" BorderPane.alignment="CENTER">
+            <FlowPane fx:id="FPListView" alignment="CENTER" columnHalignment="CENTER" prefHeight="210.0" prefWidth="360.0" BorderPane.alignment="CENTER">
                <BorderPane.margin>
                   <Insets left="20.0" right="20.0" />
                </BorderPane.margin>
-               <children>
-                  <ListView fx:id="vue2_ListeConversion" prefHeight="150.0" prefWidth="350.0" />
-               </children>
             </FlowPane>
          </center>
          <bottom>
